force-app/main/default/objects/Tipo_item_OS__c/Tipo_item_OS__c.object-meta.xml
<CustomObject>
    <label>Tipo do item da OS</label>
    <nameField>
        <label>Nome do tipo do item da OS</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tipos dos itens da OS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>