force-app/main/default/objects/Tipo_item_OS__c/fields/Codigo_Externo__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Externo__c</fullName>
    <description>ID do Tipo do item da os no ERP</description>
    <externalId>true</externalId>
    <label>Código Externo</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>