force-app/main/default/objects/Tipo_item_OS__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <description>Classificação do Item da OS (A=Acessório, E= Equipamento e K= Kit)</description>
    <inlineHelpText>A = Acessório
E = Equipamento
K = Kit</inlineHelpText>
    <label>Item</label>
    <length>1</length>
    <required>true</required>
    <type>Text</type>
</CustomField>