force-app/main/default/objects/Tipo_item_OS__c/fields/Nome__c.field-meta.xml
<CustomField>
    <fullName>Nome__c</fullName>
    <description>nome do registro</description>
    <label>Nome</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>