force-app/main/default/objects/Tipo_item_OS__c/fields/Tipo_OS__c.field-meta.xml
<CustomField>
    <fullName>Tipo_OS__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Tipo de OS</description>
    <label>Tipo de OS</label>
    <referenceTo>Tipo_OS__c</referenceTo>
    <relationshipLabel>Tipos dos itens da OS</relationshipLabel>
    <relationshipName>Tipos_dos_itens_da_OS</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>